--- a/index.html
+++ b/index.html
@@ -326,11 +326,11 @@
                 <div class="notch"></div>
 
                 <div class="slide active">
-                    <img src="C:\Users\oscar\Downloads\UI.jpg" alt="Player">
+                    <img src="UI.jpg" alt="Player">
                     <div class="slide-caption">Interfaz Moderna Glass</div>
                 </div>
                 <div class="slide">
-                    <img src="C:\Users\oscar\Downloads\EQ.jpg" alt="EQ">
+                    <img src="EQ.jpg" alt="EQ">
                     <div class="slide-caption">Ecualizador 10 Bandas</div>
                 </div>
 
